Fix post header badges size on mobile

--- a/src/components/PostHeader.css
+++ b/src/components/PostHeader.css
@@ -57,8 +57,15 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	/* Sizing in units would be preferable
+	   but they don't scale good on small screens,
+	   therefore using `em`s here. */
+	/*
 	width: calc(var(--unit) * 1.5);
 	height: calc(var(--unit) * 1.5);
+	*/
+	width: 1em;
+	height: 1em;
 	opacity: 0.8;
 }
 
